--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": 
   {
-    "target": "es5",
+    "target": "ES6" ,
     "module": "commonjs",
     "lib": ["es6"],
     "allowJs": true,
