--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,37 @@
 version: '3'
 
 services:
+  app:
+    build: .
+    entrypoint: .docker/entrypoint.sh
+    container_name: wiseapi-app
+    ports:
+      - 8080:8080
+    volumes:
+      - .:/home/node/app 
+    depends_on:
+      - db
 
-  postgresql:
-    image: postgres:latest
+  db:
+    build: .docker/postgres
+    container_name: wiseapi-db
     restart: always
+    tty: true
     env_file:
       - .postgres.env
     ports: 
-      - 5436:5432
+      - 5432:5432
+    volumes:
+      - .docker/dbdata:/var/lib/postgresql/data
+
+  pgadmin: 
+    image: dpage/pgadmin4
+    container_name: wiseapi-pgadmin
+    tty: true 
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.com 
+      - PGADMIN_DEFAULT_PASSWORD=admin 
+    ports:
+      - 8000:80
+    depends_on:
+      - db
