--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.7",
@@ -32,6 +34,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
